# accretion

./: .gitignore  ARCHITECTURE.md  BACKLOG.md  BEFORE_AFTER_COMPARISON.md  BUGFIXES_TEXT_AND_INPUT.md  CHANGELOG.md  COMPLETION_REPORT.md  Cargo.toml  FEATURES.md  FIX_SUMMARY.md  GRAVITY_FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  MASTER_STATUS_REPORT.md  MIGRATION_PLAN.md  PERFORMANCE_V1_CLOSEOUT.md  PHYSICS_FIX_ANALYSIS.md  PHYSICS_QUICK_REFERENCE.md  PHYSICS_VALIDATION_REPORT.md  PLAN_REVIEW.md  README.md  SESSION_COMPLETE.md  SESSION_SUMMARY.md  TEST_SCENARIOS_VISUAL.md  USER_CONTROLS_IMPLEMENTATION.md  benchmark_features.sh  benchmark_high_load.sh  benchmark_high_load_repeat.sh  test_all.sh
.github/: copilot-instructions.md
assets/: physics.toml
assets/fonts/: fonts.md
saves/: slot_1.toml
src/: alloc_profile.rs  asteroid.rs  asteroid_rendering.rs  campaign.rs  config.rs  constants.rs  enemy.rs  error.rs  graphics.rs  lib.rs  main.rs  menu.rs  mining.rs  particle.rs  particles.rs  player.rs  rendering.rs  rigid_body.rs  save.rs  simulation.rs  spatial_partition.rs  test_mode.rs  testing.rs
src/menu/: campaign_select.rs  cleanup.rs  common.rs  game_over.rs  load_game.rs  main_menu.rs  ore_shop.rs  pause.rs  scenario_select.rs  types.rs
src/player/: combat.rs  combat_helpers.rs  control.rs  ion_cannon.rs  mod.rs  rendering.rs  state.rs
src/testing/: scenarios_core.rs  scenarios_orbit.rs  scenarios_performance.rs  scripted_enemy_combat.rs  (+2 more)
tests/: menu_tests.rs  physics_extended_integration.rs  physics_scenarios_integration.rs
