[package]
name = "accretion"
version = "0.1.0"
edition = "2021"
authors = ["Joshua"]
description = "Accretion — an asteroid aggregation simulation game built with Bevy and Rapier2D"


[dependencies]
bevy = { version = "0.17", features = ["dynamic_linking"] }
bevy_rapier2d = { version = "0.32", features = ["simd-stable"] }
bevy_mesh = "0.17"
bevy_asset = "0.17"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]

[[bin]]
name = "accretion"
path = "src/main.rs"

[lib]
name = "accretion"
path = "src/lib.rs"
